es-client.yml
apiVersion: v1
kind: Namespace
metadata:
  name: elasticsearch
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: es-client
  namespace: elasticsearch
  labels:
    component: elasticsearch
    role: client
spec:
  selector:
    matchLabels:
      component: elasticsearch
      role: client
  replicas: 2
  template:
    metadata:
      labels:
        component: elasticsearch
        role: client
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: role
                  operator: In
                  values:
                  - client
              topologyKey: kubernetes.io/hostname
      containers:
      - name: es-client
        image: quay.io/pires/docker-elasticsearch-kubernetes:6.2.4
        resources:
          requests:
            cpu: 0.5
          limits:
            cpu: 1
        ports:
        - containerPort: 9200
          name: http
        - containerPort: 9300
          name: transport
        volumeMounts:
        - name: storage
          mountPath: /data
      volumes:
          - emptyDir:
              medium: ""
            name: storage
---
# Replace LoadBalancer for could provider with Service for local usage
# apiVersion: v1
# kind: Service
# metadata:
#   name: elasticsearch
#   namespace: elasticsearch
#   annotations: 
#     cloud.google.com/load-balancer-type: Internal
#   labels:
#     component: elasticsearch
#     role: client
# spec:
#   selector:
#     component: elasticsearch
#     role: client
#   ports:
#   - name: http
#     port: 9200
#   type: ExternalName
#   externalName: host.docker.internal
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch-client
  namespace: elasticsearch
  labels:
    component: elasticsearch
    role: client
spec:
  ports:
  - port: 9200
    name: transport
    protocol: TCP
  clusterIP: None
  selector:
    component: elasticsearch
    role: client
