ingress.yml
# NOTE: locally managed to only have one running at a time
# because both require '/' path to work
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: elasticsearch
#   namespace: elasticsearch
#   labels:
#     component: elasticsearch
#     role: client
# spec:
#   rules:
#   - http:
#       paths:
#       - path: /
#         pathType: Prefix
#         backend:
#           service:
#             name: elasticsearch-client
#             port:
#               number: 9200
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kibana
  namespace: elasticsearch
  labels:
    component: elasticsearch
    role: kibana
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kibana
            port:
              number: 5601
